--- a/chrome-extension/include.css
+++ b/chrome-extension/include.css
@@ -1,86 +1,119 @@
+.us-player, .us-player>div, .us-player>div>table{
+	margin:0;
+	padding:0;
+	line-height:100%;
+}
 
 .us-player{
-	margin: 0 0 10px;
-    border: 4px solid #000;
+	margin:0;
+	width:100%;
+    border-bottom:2px solid #000;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 15px;
-    padding-bottom: 5px;
-    padding-top:0px;
-    position: relative;
-    text-align:center;
-    background-color: #f3f3f3;
+    padding:2px 0;
+    text-align:left;
+    background-color:#FFFFFF;
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index:99999999999; /* Always show our player on TOP */
+    font-size:16px;
+    min-height: 55px;
+}
+
+.bg-pink{ background-color:#f731d2 !important; }
+.bg-blue{ background-color:rgb(49, 210, 247) !important; }
+
+.adjustHeight{
+	padding-top:58px;
 }
 
 .us-player * {
 	border-radius:0 !important;
 }
 
+.us-player .glyphicon-asterisk{
+	color:#FF0000;
+	font-size:11px;
+}
 
-.us-player>div{
-	max-width:450px;
-	margin:0 auto;
-	padding:5px 0;
+.us-player .form-control{
+	padding:2px;
+	height:26px;
+    font-size: 16px;
+}
+
+.us-player .input-group{
+	width:100% !important;
+}
+
+.us-player .control-label{
+	font-weight:normal !important;
 }
 
 .us-player a {
-	color:#31d2f7;
-	text-decoration:none;
+	color:#000;
+	text-decoration:underline;
 }
 
 .us-player a:hover {
 	color:#000;
 	text-decoration:none;
 }
-.btn-primary, .btn-primary:active {
-    margin: 15px 0 0 15px;
-    border: 3px solid #000;
-    background-color: #FFF;
-    color:#000 !important;
-    font-size: 1.4em;
-    font-weight:normal !important;
-}
-.btn-primary:hover {
-    background-color: #000 !important;
+.us-player .btn-primary, .us-player .btn-primary:active {
+    margin:5px 1px 2px 0;
+    padding:0;
+    border:2px solid #000  !important;
+    background-color:#000000;
     color:#FFF !important;
-    border: 3px solid #000;
+    font-weight:normal !important;
+    font-size:1.2em;
+    text-decoration:none !important;
+    text-align:right;
 }
+.us-player .btn-primary:hover {
+    background-color: #FFF !important;
+    color:#000 !important;
+    border:2px solid #000  !important;
+}
+.us-player .btn-primary>.glyphicon{
+	margin:5px 5px 7px 5px;
+}
+.us-player .glyphicon-info-sign { font-size:0.8em; }
 
-.glyphicon-info-sign { font-size:0.8em; }
-
-.input-group-addon {
-	font-size: 20px;
-    font-weight: bold;
+.us-player .input-group-addon {
+	font-weight: bold;
     color: #000;
     padding:3px 6px;
 }
-#UsController { display:none; }
-#UsController>div {
+
+.us-player .divHide{ display:none; }
+
+.us-player #UsController>div {
 	margin-top:15px;
 }
-#UsController label {
-	font-size:1.4em;
+.us-player #UsController label {
 	font-weight: normal;
 }
-.permanentHide{ display:none !important; }
 
 .us-player p {
 	margin:5px -10px 12px;
-	font-size:1.2em;
 }
-.trim {
+.us-player .trim {
 	padding-right: 5px !important;
     padding-left: 5px !important;
 }
-.alert {
+.us-player .alert {
 	margin:10px 0;
 }
 
-#selectedValue {
+
+.us-player #selectedValue, .us-player #selectedNewVideoValue {
 	border: 1px solid #CCC;
-    padding: 6px;
-    font-size: 17px;
-    background-color: #EFEFEF;
+    padding:4px;
+    background-color:#EFEFEF;
     display: inline-block;
     margin-top: 0px;
     color:#000;
@@ -88,44 +121,49 @@
     width:100%
 }
 
-#selectedValue:hover {
+.us-player #selectedValue:hover, .us-player #selectedNewVideoValue:hover {
     background-color: #FFF;
     color:#666;
     text-decoration:none;
 }
 
+.us-player .hide{
+	display:none !important;
+}
 
 /* Search CSS */
-.add_node{
+.us-player .add_node{
 	display:block;
 	color:#000;
 }
-.algolia-autocomplete {
+.us-player .algolia-autocomplete {
   width: 100%;
   text-align:left !important;
-  font-size:1.3em !important;
+  font-size:16px;
 }
-.algolia-autocomplete .aa-input, .algolia-autocomplete .aa-hint {
+.us-player .algolia-autocomplete .aa-input, .us-player .algolia-autocomplete .aa-hint {
   width: 100%;
 }
-.algolia-autocomplete .aa-hint {
+.us-player .algolia-autocomplete .aa-hint {
   color: #999;
 }
-.algolia-autocomplete .aa-dropdown-menu {
+.us-player .algolia-autocomplete .aa-dropdown-menu {
   width: 100%;
   background-color: #fff;
   border: 1px solid #ddd;
   border-top: none;
 }
-.add_node, .algolia-autocomplete .aa-dropdown-menu .aa-suggestion {
+.us-player .add_node, .us-player .algolia-autocomplete .aa-dropdown-menu .aa-suggestion {
   cursor: pointer;
-  padding: 5px 4px;
+  padding:3px 4px;
 }
-.add_node:hover, .algolia-autocomplete .aa-dropdown-menu .aa-suggestion.aa-cursor {
+.us-player .add_node:hover, .us-player .algolia-autocomplete .aa-dropdown-menu .aa-suggestion.aa-cursor {
   background-color: #B2D7FF;
   text-decoration:none;
 }
-.algolia-autocomplete .aa-dropdown-menu .aa-suggestion em {
+.us-player .algolia-autocomplete .aa-dropdown-menu .aa-suggestion em {
   font-weight: bold;
   font-style: normal;
 }
+
+.us-player td { line-height:100% !important; padding-top:0 !important; padding-bottom:0 !important; margin-top:0 !important; margin-bottom:0 !important; }
